# micrograd_rebuilding

./: micrograd_rebuilding.ipynb  pyproject.toml
